# bazel-java-arity

./: MODULE.bazel  README.md  maven_install.json
src/main/java/com/example/example/: BUILD.bazel  ExampleMain.java
