bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "rules_java", version = "7.12.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Command line arg parsing
                "io.netty:netty-transport-native-epoll:jar:linux-x86_64:4.1.87.Final",
                "io.netty:netty-transport-native-epoll:jar:4.1.87.Final"
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
)
